avoid navbar overlap on phones

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -733,7 +733,7 @@ pre code {
 /*  Responsive UI  */
 @media (max-width: 999px) {
   #wrap { width: 100%; }
-  #logo { display: none; }
+  #logo, #about-link, #rss-link { display: none; }
   #navbar { margin-top: 0; }
   #sidebar { display: none; }
   #main { background: none; }
